--- a/index.html
+++ b/index.html
@@ -89,31 +89,31 @@
             <div class="profile">
                 <img src="profile.png" alt="Profile Photo">
                 <div>
-                    <h1>John Doe</h1>
-                    <p>Web Developer</p>
+                    <h1>Sandesh Karki</h1>
+                    <p>Student</p>
                 </div>
             </div>
             <!-- About Me Section -->
             <div class="section">
                 <h2>About Me</h2>
-                <p>Hello! I'm <strong>John Doe</strong>,</p>
-                <p>a passionate web developer with a love for creating elegant and efficient solutions. I have experience in building responsive and user-friendly websites.</p>
+                <p>Hello! I'm <Strong>Sandesh Karki</strong>,</p>
+                <p>a international student in korea, learning and exploring. I have intrest in learning new things and achieving more.</p>
             </div>
         </div>
         <!-- Skills Section -->
         <div class="section skills">
-            <h2>Skills</h2>
-            <span>HTML</span>
-            <span>CSS</span>
-            <span>JavaScript</span>
-            <span>Planning</span>
+            <h2>Communication</h2>
+            <span>Computer Works</span>
+            <span>Critical Thinking</span>
+            <span>Creativity</span>
+            <span>Leadership</span>
         </div>
         <div>
             <!-- Experience Section -->
             <div class="section">
                 <h2>Experience</h2>
                 <ul>
-                    <li><strong>Web Developer</strong>> at ABC Corp (2021 - Present)</li>
+                    <li><strong>Front desk manager</strong>> at ABC Corp (2021 - Present)</li>
                     <li><strong>Junior Developer</strong> at XYZ Inc (2019 - 2021)</li>
                 </ul>
             </div>
